--- a/geonode/search/templates/search/_type_filters.html
+++ b/geonode/search/templates/search/_type_filters.html
@@ -6,6 +6,6 @@
     <li><a data-class="layer" {% if facets.layer > 0 %} class="active trigger-query" {% else %} class="trigger-query"{% endif %}>{% trans "Layers" %} <span class="badge pull-right">{{ facets.layer }}</span></a></li>
     <li><a style="padding-left: 40px" data-class="raster" {% if facets.raster > 0 %} class="active trigger-query" {% else %} class="trigger-query"{% endif %}>{% trans "Rasters" %} <span class="badge sub-type pull-right">{{ facets.raster }}</span></a></li>
     <li><a style="padding-left: 40px" data-class="vector" {% if facets.vector > 0 %} class="active trigger-query" {% else %} class="trigger-query"{% endif %}>{% trans "Vectors" %} <span class="badge sub-type pull-right">{{ facets.vector }}</span></a></li>
-    <li><a data-class="user" {% if facets.user > 0 %} class="active trigger-query" {% else %} class="trigger-query"{% endif %}>{% trans "Users" %} <span class="badge pull-right">{{ facets.user }}</span></a></li>
+    <li><a style="padding-left: 40px" data-class="remote" {% if facets.remote > 0 %} class="active trigger-query" {% else %} class="trigger-query"{% endif %}>{% trans "Remote" %} <span class="badge sub-type pull-right">{{ facets.remote }}</span></a></li>
   </ul>
 </nav>
