--- a/geonode/templates/maps/layer_describe.html
+++ b/geonode/templates/maps/layer_describe.html
@@ -5,7 +5,7 @@
 
 {% block head %}
 {% include "geonode/ext_header.html" %}
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/nicEdit.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}externals/lib/js/nicEdit.js"></script>
 <style type="text/css">
     .su_only {
         display:none;
