--- a/geonode/templates/maps/view.html
+++ b/geonode/templates/maps/view.html
@@ -32,7 +32,7 @@ var isMobile = {
 {% include "geonode/ext_header.html" %}
 {% include "geonode/app_header.html" %}
 {% include "geonode/geo_header.html" %}
-<script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/lib/js/nicEdit.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}geonode/externals/lib/js/nicEdit.js"></script>
 {% if "gme-" in GOOGLE_API_KEY %}
     <script src="https://www.google.com/jsapi?client={{GOOGLE_API_KEY}}"></script>
 {% else %}
