initial heatmap code request and display heatmap on every search uses dave smiley's new Solr heatmap code very preliminary code, it needs to be refactored and UI heatmap button

--- a/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
+++ b/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
@@ -19,7 +19,7 @@ OpenGeoportal = {};
 OpenGeoportal.Config = {};
 OpenGeoportal.Config.analyticsId="${analyticsId}";
 //OpenGeoportal.Config.searchUrl="http://geodata.tufts.edu/solr/select";
-OpenGeoportal.Config.searchUrl="http://localhost:8983/solr/select";
+OpenGeoportal.Config.searchUrl="http://localhost:8983/solr/ogpsearch/select";
 OpenGeoportal.Config.loginRepository="Harvard";
 OpenGeoportal.Config.loginType="";
 OpenGeoportal.Config.loginUrl="";
@@ -305,7 +305,3 @@ if (typeof jQuery == 'undefined') {
     </div>
   <div id="map"></div>
   </div>
-
-
-
-in foo/templates/ogpsearch.html,
