#54 remove unwanted ui elements from map remove some navigation buttons, print, save and basemap buttons the basemap button may have to added back in

--- a/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
+++ b/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
@@ -38,6 +38,8 @@ OpenGeoportal.Config.shareBbox="";
 <link rel="stylesheet" href="/static/geonode/ogpsearch/resources/css/mapDiv.css" type="text/css" />
 <link rel="stylesheet" href="/static/geonode/ogpsearch/resources/css/localize.css"
         type="text/css" />
+<link rel="stylesheet" href="/static/geonode/ogpsearch/resources/css/localizeHarvard.css"
+        type="text/css" />
 
 
 <!-- ogp javascript library files -->
