#54 additional ui elements removed Harvard localization css file removes more map elements and the cart tab

--- a/src/geonode-client/app/static/ogpsearch/resources/css/localizeHarvard.css
+++ b/src/geonode-client/app/static/ogpsearch/resources/css/localizeHarvard.css
@@ -32,3 +32,15 @@
 .olControlPanel.olControlNoSelect {
         display: none;			    
 }
+
+#geosearchDiv {
+	display: none;
+}
+
+#top_menu {
+	display: none;
+}
+
+[aria-controls="cartTab"] {
+	display: none;
+}
