--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -87,7 +87,7 @@
     <div id="content">
         <div id="buttonsDiv" style="clear:both;margin: 0 auto;height:10px;width:625px" align="center">
             <div  style="float:left;padding-right:10px;"><a class="wmButton"  href="/maps/new">{% trans "Create a Map" %}</a></div>
-            <div  style="float:left;padding-right:10px;"><a  class="wmButton" href="/maps/search?sort=last_modified&dir=DESC">{% trans "View a Map" %}</a></div>
+            <div  style="float:left;padding-right:10px;"><a  class="wmButton" href="/ogpsearch">{% trans "Search" %}</a></div>
             <div style="float:left;"><a  class="wmButton" href="/about">{% trans "About" %}</a></div>
         </div>
 
