Fix some issues with Chinese language

--- a/geonode/templates/maps/layer.html
+++ b/geonode/templates/maps/layer.html
@@ -453,7 +453,7 @@
     </p>
     {% endif %}
 
-	<h3>Certifications</h3>
+	<h3>{%  trans "Certifications" %}</h3>
 	<ul>
 	{% if certifications %}
 		{% for certification in certifications %}
