improved heatmap and UI cleanup moved additional functions to javascript heatmapModel object, some code cleanup tweaked UI elements, eliminated advanced search and metadata icon in search results

--- a/src/geonode-client/app/static/ogpsearch/resources/css/localizeHarvard.css
+++ b/src/geonode-client/app/static/ogpsearch/resources/css/localizeHarvard.css
@@ -2,7 +2,7 @@
 
 
 #logoGraphic {
-		background: url("../media/World-Map-w-Harvard-SMALL.png") no-repeat;
+		background: url("../media/World-Map-w-Harvard-SMALL.png") no-repeat; 
 		height: 40px;
 		width: 200px;
 		padding: 2px;
@@ -26,22 +26,32 @@
 }
 */
 
+
 #ogpMapButtons {
-	display: none;
+	display: none;  
 }
 
 .olControlPanel.olControlNoSelect {
-        display: none;			    
+        display: none;  
 }
 
 #geosearchDiv {
-	display: none;
+	display: none;  
 }
 
 #top_menu {
-	display: none;
+	display: none;  
 }
 
 [aria-controls="cartTab"] {
-	display: none;
+	display: none; 
+}
+
+.olControlModPanZoomBar {
+  margin-left: 475px;
+}
+
+
+#moreSearchOptions {
+	display: none;  
 }
