--- a/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
+++ b/geonode/ogpsearch/templates/ogpsearch/ogpsearch.html
@@ -212,6 +212,7 @@ if (typeof jQuery == 'undefined') {
                                 <label for="whatField"> <span class="labelText">What:</span>
                                 </label> <input id="whatField" type="search" />
                         </div>
+
                         <div class="advancedSearch searchFormRow searchRow1">
                                 <label for="advancedKeywordText">Keyword:</label> <input
                                         name="advancedKeywordText" type="search" class="searchFormInput"
@@ -233,7 +234,6 @@ if (typeof jQuery == 'undefined') {
                                 </span>
                         </div>
                 </div>
-
                 <div id="searchCol3" class="searchCol">
                         <div class="basicSearch basicSearchButtons searchFormRow">
                                 <button id="moreSearchOptions" class="searchToggle button offsetColor" tabindex="0" >Advanced
@@ -243,7 +243,7 @@ if (typeof jQuery == 'undefined') {
                                 <label for="advancedOriginatorText">Originator:</label> <input
                                         name="advancedOriginatorText" type="search" class="searchFormInput"
                                         id="advancedOriginatorText" />
-                        </div>
+                        </div><div align="right"><i>Powered by OpenGeoportal</i></div>
                         <div class="advancedSearch searchFormRow searchRow2">
                                 <label for="advancedDateFromText">Year(s):</label> <span
                                         class="searchFormInput"> <input name="advancedDateFromText"
