--- a/geonode/templates/page_layout.html
+++ b/geonode/templates/page_layout.html
@@ -7,10 +7,14 @@
 <head>
   <title>{% block title %} {{ SITENAME }} {% endblock %}</title>
   <link rel="shortcut icon" href="{{ STATIC_URL }}theme/img/favicon.ico"/>
+  <meta property="og:url" content="http://worldmap.harvard.edu/" />
+  <meta property="og:type" content="website" />
   <meta property="og:image" content="http://worldmap.harvard.edu/static/img/facebook_preview.png" />
-  <meta property="og:url"                content="http://worldmap.harvard.edu/" />
-  <meta property="og:title"              content="Harvard WorldMap" />
-  <meta property="og:description"        content="Build your own mapping portal and publish it to the world or to just a few collaborators. WorldMap is open source software." />
+  <meta property="og:image:secure_url" content="https://worldmap.harvard.edu/static/img/facebook_preview.png" />
+  <meta property="og:image:width" content="975" />
+  <meta property="og:image:height" content="777" />
+  <meta property="og:title" content="Harvard WorldMap" />
+  <meta property="og:description" content="Build your own mapping portal and publish it to the world or to just a few collaborators. WorldMap is open source software." />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js" type="text/javascript"></script>
   <script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/ext/adapter/jquery/ext-jquery-adapter.js"></script>
   {% include 'autocomplete_light/static.html' %}
